# general_text_classifier

./: .gitignore  README.md  pyproject.toml
classifier/: architecture.py  classifier_architecture.py  classifier_dataset.py  data_injector.py  general_classifier.py  tensor_datapack.py
labs/: classifier_dachs.ipynb  classifier_dachs.py  classifier_news.py
