[tool.poetry]
name = "general_bert_classifier"
version = "0.1.0"
description = ""
authors = ["Didac Fortuny <dacfortuny@gmail.com>"]

[tool.poetry.dependencies]
python = "3.8"
pandas = "1.2.4"
scikit-learn = "0.24.1"
transformers = "4.5.1"
torch = {url="https://download.pytorch.org/whl/cu111/torch-1.8.1%2Bcu111-cp38-cp38-win_amd64.whl"}

[tool.poetry.dev-dependencies]
jupyterlab = "^3.0"
ipywidgets = "7.6.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
